bump java, rewrite to kotlin and replace webflux with web